# MMsuit

./: LICENSE  MANIFEST.in  MMapp.py  MMcalc.py  README.md  Requirements.txt  pyproject.toml  setup.py
MMsuit/: MMapp.py  MMcalc.py  __init__.py
Tutorials/: MMsuit_CUI_tutorial.ipynb
docs/: BIOEN537YS.pptx  ComponentsSpecsDoc.md  Functional Specs  Functional Specs.md  FunctionalSpecsDoc.md
tests/: test_MMcalc.py
