[project]
name = "MMsuit"
version = "0.0.1"
authors = [
  { name="Yahia Saad", email="yahias@uw.edu" },
]
description = "A package for fitting and plotting Michaelis-Menten and Lineweaver-Burk equations from experiements or simulate them"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://https://github.com/yahiasuw/MMsuit"
Issues = "https://https://github.com/yahiasuw/MMsuit/issues"