[project]
name = "MMsuit"
version = "0.0.1"
authors = [
  { name="Yahia Saad", email="yahias@uw.edu" },
]
description = "A package for fitting and plotting Michaelis-Menten and Lineweaver-Burk equations from experiements or simulate them"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.11"
plotly = "^5.15"
numpy = "^1.24"
scipy = "^1.14.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-dash = "^3.0"


[project.urls]
Homepage = "https://https://github.com/yahiasuw/MMsuit"
Issues = "https://https://github.com/yahiasuw/MMsuit/issues"
