[project]
name = "MMsuit"
version = "0.0.1"
authors = [
  { name="Yahia Saad", email="yahias@uw.edu" },
]
description = "A package for fitting and plotting Michaelis-Menten and Lineweaver-Burk equations from experiements or simulate them"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dash>=2.7.0",
    "plotly>=5.15",
    "numpy>=1.23.5",
    "pandas>=1.5.2",
    "scipy>=1.9"
]
[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
scipy = "^1.9.3"
pandas = "^1.5.2"
Flask = "^2.2.2"
dash = "^2.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-dash = "^3.0"


[project.urls]
Homepage = "https://https://github.com/yahiasuw/MMsuit"
Issues = "https://https://github.com/yahiasuw/MMsuit/issues"
